; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_tag.c_delete_tag.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_tag.c_delete_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }

@.str = private unnamed_addr constant [27 x i8] c"Deleted tag '%s' (was %s)\0A\00", align 1
@DEFAULT_ABBREV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, %struct.object_id*, i8*)* @delete_tag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @delete_tag(i8* %0, i8* %1, %struct.object_id* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.object_id*, align 8
  %9 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store %struct.object_id* %2, %struct.object_id** %8, align 8
  store i8* %3, i8** %9, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = load %struct.object_id*, %struct.object_id** %8, align 8
  %12 = call i64 @delete_ref(i32* null, i8* %10, %struct.object_id* %11, i32 0)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  br label %22

15:                                               ; preds = %4
  %16 = call i8* @_(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %17 = load i8*, i8** %6, align 8
  %18 = load %struct.object_id*, %struct.object_id** %8, align 8
  %19 = load i32, i32* @DEFAULT_ABBREV, align 4
  %20 = call i8* @find_unique_abbrev(%struct.object_id* %18, i32 %19)
  %21 = call i32 @printf(i8* %16, i8* %17, i8* %20)
  store i32 0, i32* %5, align 4
  br label %22

22:                                               ; preds = %15, %14
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i64 @delete_ref(i32*, i8*, %struct.object_id*, i32) #1

declare dso_local i32 @printf(i8*, i8*, i8*) #1

declare dso_local i8* @_(i8*) #1

declare dso_local i8* @find_unique_abbrev(%struct.object_id*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
